WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
126839
REGRESSION(
r160806
): line-height is not applied when only present in :link style.
https://bugs.webkit.org/show_bug.cgi?id=126839
Summary
REGRESSION(r160806): line-height is not applied when only present in :link st...
Andreas Kling
Reported
2014-01-12 04:33:35 PST
<
rdar://problem/15799899
>
Attachments
Patch
(1.49 KB, patch)
2014-01-12 04:36 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Patch
(3.76 KB, patch)
2014-01-12 04:37 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2014-01-12 04:36:56 PST
Created
attachment 220966
[details]
Patch
Andreas Kling
Comment 2
2014-01-12 04:37:36 PST
Created
attachment 220967
[details]
Patch
Antti Koivisto
Comment 3
2014-01-12 05:11:20 PST
Comment on
attachment 220967
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=220967&action=review
> Source/WebCore/css/StyleResolver.cpp:4255 > + if (auto value = state.style()->insideLink() == NotInsideLink ? cssValue[0] : cssValue[SelectorChecker::MatchLink])
cssValue indexing by LinkMatchMask is pretty incomprehensible. It might be better to just have separate variables (cssValue/linkCSSValue/visitedCSSValue or similar).
Andreas Kling
Comment 4
2014-01-12 10:22:26 PST
(In reply to
comment #3
)
> (From update of
attachment 220967
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=220967&action=review
> > > Source/WebCore/css/StyleResolver.cpp:4255 > > + if (auto value = state.style()->insideLink() == NotInsideLink ? cssValue[0] : cssValue[SelectorChecker::MatchLink]) > > cssValue indexing by LinkMatchMask is pretty incomprehensible. It might be better to just have separate variables (cssValue/linkCSSValue/visitedCSSValue or similar).
Yeah, I agree. Let's keep this fix surgical and sort that in a separate change though.
WebKit Commit Bot
Comment 5
2014-01-12 10:51:28 PST
Comment on
attachment 220967
[details]
Patch Clearing flags on attachment: 220967 Committed
r161814
: <
http://trac.webkit.org/changeset/161814
>
WebKit Commit Bot
Comment 6
2014-01-12 10:51:30 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug