REGRESSION(r160806): line-height is not applied when only present in :link style. <http://webkit.org/b/126839> <rdar://problem/15799899>

Reviewed by Antti Koivisto.

Source/WebCore:

Test: fast/css/line-height-link-style.html

* css/StyleResolver.cpp:
(WebCore::StyleResolver::CascadedProperties::Property::apply):

    Use the CSSValue for SelectorChecker::MatchLink when applying
    style inside a link.

LayoutTests:

* fast/css/line-height-link-style-expected.txt: Added.
* fast/css/line-height-link-style.html: Added.


Canonical link: https://commits.webkit.org/144813@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161814 268f45cc-cd09-0410-ab3c-d52691b4dbfc